--- a/node-webapp-pdf/src/views/invoice.handlebars
+++ b/node-webapp-pdf/src/views/invoice.handlebars
@@ -103,17 +103,17 @@
 <div class="container">
     <div class="header">
         <img src="/logo.svg" alt="Logo" />
-        <div class="company-name">E-STORE - {{ user.name }}</div>
+        <div class="company-name">E-STORE</div>
     </div>
     <div style="height: 20px"></div>
     <div class="invoice-ref">
         <div class="invoice-ref-row">
-            <div><b>Customer</b>: {{ order.user.firstName }}</div>
-            <div><b>Date</b>: 04/20/2021</div>
+            <div><b>Customer</b>: {{ order.user.firstName }} {{ order.user.lastName }}</div>
+            <div><b>Date</b>: {{date order.createdAt}}</div>
         </div>
         <div style="height: 15px"></div>
         <div class="invoice-ref-row right">
-            <div><b>Reference</b>: <a href="https://blog.tericcabrel.com">0437873803</a></div>
+            <div><b>Reference</b>: <a href="https://blog.tericcabrel.com">{{ order.reference }}</a></div>
         </div>
     </div>
     <div style="height: 30px"></div>
@@ -124,14 +124,14 @@
     <div style="height: 10px"></div>
     <div class="invoice-address">
         <div class="invoice-address-shipping width-50">
-            <div class="mb-10">Joel Embiid</div>
-            <div class="mb-10">Philadelphia, United States</div>
-            <div class="mb-10">46874, Mount Hill Breadway</div>
+            <div class="mb-10">{{ order.shippingAddress.firstName }} {{ order.shippingAddress.lastName }}</div>
+            <div class="mb-10">{{ order.shippingAddress.city }}, {{ order.shippingAddress.country }}</div>
+            <div class="mb-10">{{ order.shippingAddress.postalCode }}, {{ order.shippingAddress.street }}</div>
         </div>
         <div class="invoice-address-shipping width-50 right">
-            <div class="mb-10">Pascal Siakam</div>
-            <div class="mb-10">Toronto, Canada</div>
-            <div class="mb-10">38232, Menlo St Downhill</div>
+            <div class="mb-10">{{ order.billingAddress.firstName }} {{ order.billingAddress.lastName }}</div>
+            <div class="mb-10">{{ order.billingAddress.city }}, {{ order.billingAddress.country }}</div>
+            <div class="mb-10">{{ order.billingAddress.postalCode }}, {{ order.billingAddress.street }}</div>
         </div>
     </div>
     <div style="height: 20px"></div>
@@ -140,12 +140,13 @@
     </div>
     <div style="height: 20px"></div>
     <div class="products">
+        {{#each order.items}}
         <div class="product-item">
             <div class="product-item-picture">
-                <img src="https://picsum.photos/100" alt="product-picture" />
+                <img src="{{ this.productPicture }}" width="100" height="100" alt="product-picture" />
             </div>
             <div class="product-item-info">
-                <div class="product-item-info-name">BD Plastipak Luer Lock - Syringes</div>
+                <div class="product-item-info-name">{{ this.productName }}</div>
                 <div style="height: 8px"></div>
                 <div class="product-item-info-options">
                     <span style="padding-right: 50px">SIZE: <b>16 cm</b></span>
@@ -153,47 +154,12 @@
                 </div>
             </div>
             <div class="product-item-price">
-                <div>Qty: 02</div>
+                <div>Qty: {{ this.quantity }}</div>
                 <div style="height: 8px"></div>
-                <div><b>€42.98</b></div>
+                <div><b>€{{round this.price }}</b></div>
             </div>
         </div>
-        <div class="product-item">
-            <div class="product-item-picture">
-                <img src="https://picsum.photos/100" alt="product-picture" />
-            </div>
-            <div class="product-item-info">
-                <div class="product-item-info-name">BD Plastipak Luer Lock - Syringes</div>
-                <div style="height: 8px"></div>
-                <div class="product-item-info-options">
-                    <span style="padding-right: 50px">SIZE: <b>16 cm</b></span>
-                    <span>PACKAGING: <b>Single</b></span>
-                </div>
-            </div>
-            <div class="product-item-price">
-                <div>Qty: 02</div>
-                <div style="height: 8px"></div>
-                <div><b>€42.98</b></div>
-            </div>
-        </div>
-        <div class="product-item">
-            <div class="product-item-picture">
-                <img src="https://picsum.photos/100" alt="product-picture" />
-            </div>
-            <div class="product-item-info">
-                <div class="product-item-info-name">BD Plastipak Luer Lock - Syringes</div>
-                <div style="height: 8px"></div>
-                <div class="product-item-info-options">
-                    <span style="padding-right: 50px">SIZE: <b>16 cm</b></span>
-                    <span>PACKAGING: <b>Single</b></span>
-                </div>
-            </div>
-            <div class="product-item-price">
-                <div>Qty: 02</div>
-                <div style="height: 8px"></div>
-                <div><b>€42.98</b></div>
-            </div>
-        </div>
+        {{/each}}
     </div>
     <div style="margin-top: 20px; border-bottom: solid 2px #f5f5f5"></div>
     <div style="height: 20px"></div>
@@ -201,19 +167,19 @@
         <tbody>
         <tr>
             <td>Subtotal</td>
-            <td class="right">€639.5</td>
+            <td class="right">€{{round orderSubTotal }}</td>
         </tr>
         <tr>
             <td>Shipping</td>
-            <td class="right">€25.5</td>
+            <td class="right">€{{round order.shippingAmount }}</td>
         </tr>
         <tr>
             <td>Sales Tax</td>
-            <td class="right">€35.5</td>
+            <td class="right">€{{round order.taxAmount }}</td>
         </tr>
         <tr>
             <td style="padding-top: 10px"><b>TOTAL</b></td>
-            <td style="padding-top: 10px" class="right"><b>€700.5</b></td>
+            <td style="padding-top: 10px" class="right"><b>€{{round order.totalAmount }}</b></td>
         </tr>
         </tbody>
     </table>
