feat: render invoice template with dynamic data

--- a/node-webapp-pdf/src/views/invoice.handlebars
+++ b/node-webapp-pdf/src/views/invoice.handlebars
@@ -149,8 +149,8 @@
                 <div class="product-item-info-name">{{ this.productName }}</div>
                 <div style="height: 8px"></div>
                 <div class="product-item-info-options">
-                    <span style="padding-right: 50px">SIZE: <b>16 cm</b></span>
-                    <span>PACKAGING: <b>Single</b></span>
+                    <span style="padding-right: 50px">{{ this.productOptions.[0].[0] }}: <b>{{ this.productOptions.[0].[1] }}</b></span>
+                    <span>{{ this.productOptions.[1].[0] }}: <b>{{ this.productOptions.[1].[1] }}</b></span>
                 </div>
             </div>
             <div class="product-item-price">
